--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13620,7 +13620,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  .page-shell-mobile__display-none,
+  ._1udzt2s,
   .hide-md {
     display: none!important
   }
