--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -42049,7 +42049,7 @@ tr.show-desktop {
   padding-left: 1px !important;
 }
 @media (min-width: 744px) {
-  .page-shell-mobile__display-none {
+  ._1udzt2s {
     display: none !important;
   }
 }
