--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1175,23 +1175,23 @@
   width: 100% !important;
   color: #717171 !important;
 }
-._16d2cdh {
+.calendar-section__day-header {
   height: 100% !important;
 }
-._1d5bi29 {
+.calendar-section__day-header-btn {
   background: #fff !important;
   border: none !important;
   height: 100% !important;
   width: 100% !important;
 }
-._ft0vu4 {
+.calendar-section__day-text {
   font-size: 10px !important;
   line-height: 12px !important;
   color: #222 !important;
   font-weight: 800 !important;
   letter-spacing: 0.04em !important;
 }
-._f0dlo0 {
+.calendar-section__day-date-wrapper {
   border-radius: 24px !important;
   height: 40px !important;
   margin-left: auto !important;
@@ -1199,7 +1199,7 @@
   padding-top: 5px !important;
   width: 40px !important;
 }
-._y6z7bm {
+.calendar-section__time-content {
   -webkit-box-align: start !important;
   align-items: flex-start !important;
   display: flex !important;
@@ -1216,7 +1216,7 @@
   -ms-flex: none;
   flex: none;
 }
-._1vert9o9 {
+.calendar-section__day-slot {
   background: #f2f2f2 !important;
 }
 .rbc-time-column .rbc-timeslot-group {
@@ -1275,7 +1275,7 @@
 .rbc-time-content > * + * > * {
   border-left: 1px solid #ebebeb;
 }
-._cxqwpe {
+.calendar-section__event-content-button {
   border: 1px solid rgba(0, 0, 0, 0.15) !important;
   border-radius: 8px !important;
   color: #222 !important;
@@ -1300,7 +1300,7 @@
   max-width: -moz-calc(100% - 24px);
   max-width: calc(100% - 24px);
 }
-._1oftqjo1 {
+.calendar-section__event-label {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -1310,7 +1310,7 @@
   line-height: 1.33333em !important;
   color: #767676 !important;
 }
-._2c02j6 {
+.calendar-section__event-content-wrapper {
   -webkit-box-pack: justify !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -1320,7 +1320,7 @@
   justify-content: space-between !important;
   height: 100% !important;
 }
-._18y3rc3 {
+.calendar-section__event-content-price {
   font-size: 12px !important;
   line-height: 16px !important;
   color: #717171 !important;
@@ -1328,7 +1328,7 @@
   top: -16px !important;
   right: 0 !important;
 }
-._19mlyal {
+.calendar-section__event-content-guest-book {
   margin-left: 4px !important;
   margin-right: auto !important;
   white-space: nowrap !important;
@@ -1339,7 +1339,7 @@
   color: #484848 !important;
   display: none !important;
 }
-._qkevs2 {
+.calendar-section__event-content-desc {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 600 !important;
@@ -1352,7 +1352,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-._1y050ez {
+.calendar-section__event-content-guest-img-wrapper {
   margin-left: auto !important;
 }
 .rbc-day-slot .rbc-events-container {
@@ -1379,7 +1379,7 @@
   -ms-user-select: none;
   user-select: none;
 }
-._zwvj0ge {
+.calendar-section__day-date-weekends-wrapper {
   border-radius: 24px !important;
   height: 40px !important;
   margin-left: auto !important;
@@ -1388,7 +1388,7 @@
   width: 40px !important;
   background: #222 !important;
 }
-._bdhhao {
+.calendar-section__day-date-weekends-text {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -1398,7 +1398,7 @@
   line-height: 1.25em !important;
   color: #fff !important;
 }
-._zxnk2hn {
+.calendar-section__day-date-text {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -1590,7 +1590,7 @@
     height: 65px !important;
   }
 }
-._1xeokus {
+.calendar-section {
   height: -webkit-calc(100% - 68px) !important;
   height: -moz-calc(100% - 68px) !important;
   height: calc(100% - 68px) !important;
@@ -1599,7 +1599,7 @@
   width: 100% !important;
 }
 @media (max-width: 743px) {
-  ._1xeokus {
+  .calendar-section {
     height: -webkit-calc(100% - 65px) !important;
     height: -moz-calc(100% - 65px) !important;
     height: calc(100% - 65px) !important;
@@ -1764,7 +1764,7 @@
   border-left: none !important;
   margin-left: 0 !important;
 }
-._1bmh2xm {
+.calendar-section__time-content-text {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -1781,7 +1781,7 @@
   -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
-._gyq7m7 {
+.calendar-section__time-content-wrapper {
   padding-left: 44px !important;
   padding-right: 12px !important;
   position: relative !important;
@@ -1838,7 +1838,7 @@
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._x7ma3h {
+.calendar-section__time-header-content {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   border-left: 1px solid #ebebeb !important;
@@ -1847,7 +1847,7 @@
   flex-direction: column !important;
   min-width: 0 !important;
 }
-._1i7xds8 {
+.calendar-section__time-header {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: horizontal !important;
   background: #fff !important;
@@ -2050,24 +2050,24 @@
   overflow: hidden !important;
   border-radius: 0 8px 8px 0 !important;
 }
-.ijwt9ml[class][class] {
+.calendar-section__event-content-guest-img[class][class] {
   color: var(--fzz-n-g-g);
   object-fit: cover;
   overflow: hidden;
 }
-.dir.ijwt9ml[class][class] {
+.dir.calendar-section__event-content-guest-img[class][class] {
   background: var(---xl-o-x-n);
 }
 .dir.rpd25gi[class][class] {
   border-radius: 50%;
 }
-.r8go4bu[class][class] {
+.calendar-section__event-content-guest-img-size[class][class] {
   height: 48px;
   width: 48px;
   max-height: 48px;
   max-width: 48px;
 }
-.c18p8rr2[class][class] {
+.calendar-section__event-content-guest-img-size-2[class][class] {
   height: var(--tools-dls-profile-photo-custom-size);
   width: var(--tools-dls-profile-photo-custom-size);
   max-height: var(--tools-dls-profile-photo-custom-size);
