--- a/src/css/global.css
+++ b/src/css/global.css
@@ -27,7 +27,7 @@
   margin-top: 24px!important
 }
 ._13wkz77,
-._v72lrv {
+.calendar-sideba__sched-btn-wrapper {
   padding-top: 8px!important
 }
 ._16sb0g4v,
