--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13601,7 +13601,7 @@ fieldset[disabled] .btn {
   margin-top: 24px!important
 }
 ._13wkz77,
-._v72lrv {
+.calendar-sideba__sched-btn-wrapper {
   padding-top: 8px!important
 }
 ._16sb0g4v,
