rename _1udzt2s -> page-shell-mobile__display-none

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13626,7 +13626,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .page-shell-mobile__display-none,
   .hide-md {
     display: none!important
   }
