--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -42022,7 +42022,7 @@ tr.show-desktop {
   padding-left: 1px !important;
 }
 @media (min-width: 744px) {
-  ._1udzt2s {
+  .page-shell-mobile__display-none {
     display: none !important;
   }
 }
