--- a/src/css/global.css
+++ b/src/css/global.css
@@ -46,7 +46,7 @@
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .page-shell-mobile__display-none,
   .hide-md {
     display: none!important
   }
